# binder

./: Cargo.toml  README.md
src/: config.rs  file_id.rs  filter_extensions.rs  filter_site.rs  filter_status.rs  lib.rs  load_content_from_grimoire.rs  main.rs  output_dir_name.rs  override_path.rs  password.rs  update_meilisearch.rs  valid_nonce.rs
tests/: basic_test.rs
