[package]
name = "site_loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "site_loader"
path = "src/main.rs"

[dependencies]
meilisearch-sdk = "0.24.1"
miette = "5.10.0"
nom = "7.1.3"
tokio = "1.29.1"
watchexec = "2.3.0"
watchexec-events = "1.0.0"
watchexec-signals = "1.0.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
security-framework = "2.9.2"
regex = "1.9.1"
slug = "0.1.4"
